--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Nunito Sans', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5{
+  font-weight: 700 !important;
 }
 
 button.placeholder{
@@ -13,14 +16,6 @@ button.placeholder{
 
 .movieCard{
   margin:10px;
-}
-
-.speciesEntries{
-  margin-top:40px;
-}
-
-.speciesEntries li{
-  text-transform: capitalize;
 }
 
 .characterTable{
