--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
 .App {
   background: #222;
   color: #ffde00;
-
+    .navbar-brand{
+        img{
+            width: 100%;
+            height: 50px;
+        }
+    }
   .accordion {
     margin: 0.5rem 0;
     border-radius: 8px;
