--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,6 +138,7 @@
       position: relative;
       animation-play-state: running;
       opacity: 1;
+      color: #ffde00;
       animation: marquee 50s linear infinite;
     }
 
